# TestAffichageSynchrone

./: .gitignore  CMakeLists.txt  vcpkg.json
.github/workflows/: pages.yml
docs/: Doxyfile
docs/source/: affichage_synchrone.rst  conf.py  synchroniseur_multi_video.rst
docs/xml/: AfficheurVideo_8cpp.xml  AfficheurVideo_8h.xml  Doxyfile.xml  SynchroniseurMultiVideo_8cpp.xml  SynchroniseurMultiVideo_8h.xml  _synchroniseur_multi_video_8cpp.xml  _synchroniseur_multi_video_8h.xml  ac3__parser_8h.xml  adler32_8h.xml  adts__parser_8h.xml  aes_8h.xml  aes__ctr_8h.xml  ambient__viewing__environment_8h.xml  attributes_8h.xml  audio__fifo_8h.xml  avassert_8h.xml  avcodec_8h.xml  avconfig_8h.xml  avdct_8h.xml  avdevice_8h.xml  avfilter_8h.xml  avformat_8h.xml  avio_8h.xml  avstring_8h.xml  avutil_8h.xml  base64_8h.xml  blowfish_8h.xml  bprint_8h.xml  bsf_8h.xml  bswap_8h.xml  buffer_8h.xml  buffersink_8h.xml  buffersrc_8h.xml  camellia_8h.xml  cast5_8h.xml  channel__layout_8h.xml  classAfficheurVideo.xml  classSynchroniseurMultiVideo.xml  class_synchroniseur_multi_video.xml  codec_8h.xml  (+464 more)
include/AffichageSynchrone/: AffichageSynchrone.h
include/SynchroniseurMultiVideo/: SynchroniseurMultiVideo.cpp  SynchroniseurMultiVideo.h
include/raymedia/: raymedia.c  raymedia.h
src/: AffichageSynchrone.cpp  main.cpp
